create network connection and simple all products preview

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/allProductsFragment"
-        android:name="com.example.nwavetask.AllProducts.AllProductsFragment"
+        android:name="com.example.nwavetask.allProducts.AllProductsFragment"
         android:label="AllProductsFragment" />
 </navigation>
