--- a/app/src/main/res/layout/fragment_all_products.xml
+++ b/app/src/main/res/layout/fragment_all_products.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AllProducts.AllProductsFragment" >
+        tools:context=".allProducts.AllProductsFragment" >
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
