--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -7,6 +7,9 @@
         <variable
             name="product"
             type="com.example.nwavetask.model.Product" />
+        <variable
+            name="transaction"
+            type="com.example.nwavetask.allProducts.Transaction" />
 
     </data>
 
@@ -15,7 +18,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         app:cardCornerRadius="20dp"
-        app:cardElevation="20dp">
+        app:cardElevation="20dp"
+        android:onClick="@{()->transaction.moveToDetailsScreen(product)}"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
