--- a/app/src/main/res/layout/fragment_all_products.xml
+++ b/app/src/main/res/layout/fragment_all_products.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-    <import type="com.example.nwavetask.AllProductsAdapter">
+    <import type="com.example.nwavetask.allProduct.AllProductsAdapter">
     </import>
         <variable
             name="mAdapter"
-            type="com.example.nwavetask.AllProductsAdapter" />
+            type="com.example.nwavetask.allProduct.AllProductsAdapter" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".allProducts.AllProductsFragment" >
+        tools:context=".allProduct.AllProductsFragment" >
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
