add tool bar and inhance  home ui

--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -9,7 +9,7 @@
             type="com.example.nwavetask.model.Product" />
         <variable
             name="transaction"
-            type="com.example.nwavetask.allProduct.Transaction" />
+            type="com.example.nwavetask.allProduct.view.Transaction" />
 
     </data>
 
@@ -30,8 +30,6 @@
                 android:id="@+id/imageView"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
                 android:src="@drawable/no_img"
                 app:imageUrl="@{product.image_url}"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,11 +42,10 @@
                 android:id="@+id/tv_product_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="3dp"
+                android:maxLines="5"
                 android:text='@{product.name}'
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/tv_product_price"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -61,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:maxLines="2"
                 android:text="@{product.description}"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -74,10 +71,10 @@
                 android:id="@+id/tv_product_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="8dp"
                 android:text="@{product.price}"
                 android:textColor="#FF0000"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_product_description"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_product_title" />
