--- a/app/src/main/res/layout/fragment_all_products.xml
+++ b/app/src/main/res/layout/fragment_all_products.xml
@@ -2,30 +2,33 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-    <import type="com.example.nwavetask.allProduct.AllProductsAdapter">
-    </import>
+
+        <import type="com.example.nwavetask.allProduct.view.AllProductsAdapter"></import>
+
         <variable
             name="mAdapter"
-            type="com.example.nwavetask.allProduct.AllProductsAdapter" />
+            type="com.example.nwavetask.allProduct.view.AllProductsAdapter" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".allProduct.AllProductsFragment" >
+        tools:context=".allProduct.view.AllProductsFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:adapter="@{mAdapter}"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/product_item"
-            app:adapter="@{mAdapter}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-           />
+            app:spanCount="2"
+            tools:listitem="@layout/product_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
